Fix navbar alignment when screen less than 992px

--- a/src/ServicePulse.Host/vue/src/assets/navbar.css
+++ b/src/ServicePulse.Host/vue/src/assets/navbar.css
@@ -4,7 +4,8 @@
 }  
 
 .navbar {
-    height: 60px;
+    height: 60px;    
+    flex-wrap:nowrap;
 }
 
 .navbar-inverse {
